--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     2)If you made a new account, buy some BNB. The MetaMask plugin has a button that will allow you to buy BNB from Binance.
                     3)Once you have the plugin installed, this website will recognize it and add buttons that allow you to bid on, buy and sell Elon’s NFT for ElonsBucksTokens directly in the interface.
                     4)For example, you can buy TeslaTruckCrush#10 for 5 BNB (~$1000 USD)</p>
-                <p style="text-align:center; margin-top: 3%; font-size: 0.8rem" class="gif-block"><img src="img/truck.gif"><br>TeslaTruckCrush#10</p>
+                <p style="text-align:center; margin-top: 3%; font-size: 0.8rem" class="gif-block"><img src="img/truck.gif" style="max-width:100%"><br>TeslaTruckCrush#10</p>
                 </div>
         </div>
     </div>
